   values in list context rather than integers, which should be more
   efficient.
   https://rt.cpan.org/Ticket/Display.html?id=69158

 - the btm data structure used by the flood_fill code is now
   initialized more efficiently.
   https://rt.cpan.org/Ticket/Display.html?id=68994

 - updated the Thanks list in README
   https://rt.cpan.org/Ticket/Display.html?id=71607

Imager 0.85_01 - 10 Oct 2011
==============

 - add simple tests for the Imager::Test test_image generators

 - io_glue I/O buffering re-work:

   - reorganize io_glue to do it's own buffering by default

   - the unbuffered functions are available as i_io_raw_read() (or
     raw_read() from perl) etc but are not recommended for typical
     use.

   - use the new i_io_peekn() when checking for file magic to avoid
     seek, allowing Imager to detect the file type and read the file
     from an unseekable stream (for formats that don't use random
     access)

   - added several new I/O layer API functions.

   - fix the TGA performance problem, most noticably on Win32
     https://rt.cpan.org/Ticket/Display.html?id=70037

   - TIFF now uses wrapper functions of the correct types to avoid casts
     https://rt.cpan.org/Ticket/Display.html?id=69912

   - the callback IO object did its own buffering, controlled by the
     maxbuffer parameter supplied to the read() and write() methods.
     This buffering has been removed, to avoid redundancy with the
     common io_glue buffering.  This also avoids a bug in that code
     which could rarely pass a zero length to the read callback and
     then panic about the result.

   - the callback IO object now tests the result of calling the close
     callback, which should return true for success.

   - the PNM reader did its own buffering.  This buffering has been
     removed to avoid redundancy with the common io_glue buffering.

   - previously the read handlers for fd and callback I/O layers would