@@ -53,6 +53,9 @@ Bug fixes:
  - updated the Thanks list in README
    https://rt.cpan.org/Ticket/Display.html?id=71607
 
+ - check there's at least one coefficient for the convolution filter
+   https://rt.cpan.org/Ticket/Display.html?id=68993
+
 Imager 0.85_01 - 10 Oct 2011
 ==============
 
